--- a/ATY/enquiry.html
+++ b/ATY/enquiry.html
@@ -1,24 +1,98 @@
 <html>
+    <head>
+        <title>Enquiry</title>
+
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>At Your service</title>
+
+    <!-- Importing css -->
+    <link rel="stylesheet" href="./styles/slider.css" />
+     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+   <!-- For Tailwind Css -->
+    <!-- CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
 <body>
-<div>
-<form action="userinfo.php" method="post">
-<div>
-<label>username</label> 
-<input type="text" name="user" autocomplete="off" class=form-control></div>
+<div class="relative min-h-screen  flex flex-col sm:justify-center items-center  ">
+    <form action="userinfo.php" class="w-96 shadow-xl p-5 rounded-lg" method="post">
+    <div class=" text-center mb-5 text-2xl font-Montserrat">Contact</div>
+    <div>
+    <label class="sr-only">username</label> 
+    <input placeholder="Username" type="text"class="mt-1 pl-2 p-2 block w-full border-none bg-gray-50 h-11 rounded-xl shadow-lg hover:bg-blue-100 focus:bg-blue-100 focus:ring-0" type="text" name="user" autocomplete="off" class=form-control></div>
+
+<div class="mt-5">
+    <label class="sr-only">Email Id</label> 
+    <input placeholder="Email" class="mt-1 pl-2 block p-2 w-full border-none bg-gray-50 h-11 rounded-xl shadow-lg hover:bg-blue-100 focus:bg-blue-100 focus:ring-0" type="text" name="Email Id" autocomplete="off" class=form-control>
 </div>
-<div>
-<label>Email Id</label> 
-<input type="text" name="Email Id" autocomplete="off" class=form-control>
-</div>
-<div>
-<label>Mobile Number</label> 
-<input type="text" name="Mobile Number" autocomplete="off" class=form-control></div>
-<div>
-<label>Description of Requirement</label>
-<textarea class="form-control"></textarea>
-</div>
-<button type="submit" class="btn btn-primary">submit</button>
+<div class="mt-5">
+    <label class="sr-only">Mobile Number</label> 
+    <input placeholder="Mobile Number"class="mt-1  pl-2 block w-full border-none bg-gray-50 h-11 rounded-xl shadow-lg hover:bg-blue-100 focus:bg-blue-100 focus:ring-0" type="text" name="Mobile Number" autocomplete="off" class=form-control></div>
+    <div class="mt-5">
+        <label class="sr-only">Description of Requirement</label>
+        <textarea rows="20" cols="15" placeholder="Description of Requirement" class="p-2  mt-1 h-36 pl-2 block w-full border-none bg-gray-100 h-11 rounded-xl shadow-lg hover:bg-blue-100 focus:bg-blue-100 focus:ring-0" class="form-control"></textarea>
+    </div>
+    <div class="w-full">
+
+        <button type="submit" class="m-auto mt-5 px-5 bg-blue-400 text-white p-3 rounded-lg">submit</button>
+    </div>
 </form>
 </div>
+<div>
+
+
+
+
+
+
+
+     <!-- Footer -->
+    <footer
+        class=" sticky  bg-gray-900 min-h-80  w-full overflow-hidden text-left sm:text-center text-white font-Montserrat shadow-inner mt-10 p-2 md:p-5">
+        <p class="text-2xl font-serif h-12 font-semibold">At Your Service</p>
+        <div class=" flex flex-col md:flex-row w-96 text-xs sm:text-sm sm:w-[38rem] gap-5  text-center m-auto mt-5 ">
+            <!-- Change Them Accordingly -->
+            <p>Site rules</p>
+            <a href="#">Terms and conditions</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">About us</a>
+            <a href="#">Contact us</a>
+            <p>Advertise with us</p>
+        </div>
+
+
+
+        <div class="m-auto w-10 mt-5 ">
+            <div class=" w-10 h-10">
+
+                <svg class=" text-white text-2xl w-10 h-10 " fill="#FFFFFF" stroke="currentColor" viewBox="0 0 55 55"
+                    x="0px" y="0px">
+                    <path d="M49,0c-3.309,0-6,2.691-6,6c0,1.035,0.263,2.009,0.726,2.86l-9.829,9.829C32.542,17.634,30.846,17,29,17
+                                s-3.542,0.634-4.898,1.688l-7.669-7.669C16.785,10.424,17,9.74,17,9c0-2.206-1.794-4-4-4S9,6.794,9,9s1.794,4,4,4
+            c0.74,0,1.424-0.215,2.019-0.567l7.669,7.669C21.634,21.458,21,23.154,21,25s0.634,3.542,1.688,4.897L10.024,42.562
+            C8.958,41.595,7.549,41,6,41c-3.309,0-6,2.691-6,6s2.691,6,6,6s6-2.691,6-6c0-1.035-0.263-2.009-0.726-2.86l12.829-12.829
+            c1.106,0.86,2.44,1.436,3.898,1.619v10.16c-2.833,0.478-5,2.942-5,5.91c0,3.309,2.691,6,6,6s6-2.691,6-6c0-2.967-2.167-5.431-5-5.91
+            v-10.16c1.458-0.183,2.792-0.759,3.898-1.619l7.669,7.669C41.215,39.576,41,40.26,41,41c0,2.206,1.794,4,4,4s4-1.794,4-4
+            s-1.794-4-4-4c-0.74,0-1.424,0.215-2.019,0.567l-7.669-7.669C36.366,28.542,37,26.846,37,25s-0.634-3.542-1.688-4.897l9.665-9.665
+            C46.042,11.405,47.451,12,49,12c3.309,0,6-2.691,6-6S52.309,0,49,0z"></path>
+                </svg>
+
+            </div>
+            <div class=" w-10 h-10">
+
+                <span class="text-lg block w-full text-white font-semibold font-Montserrat mt-1">
+
+                    AYS
+                </span>
+            </div>
+        </div>
+        <p class="m-auto  pb-4 text-sm font-serif text-center font-bold mt-5">
+            ASY © 2022. All rights reserved.
+        </p>
+        </div>
+    </footer>
 </body>
+
+
+
 </html>
